--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,12 +40,12 @@
 
 
 @article{sautier2024UNIT,
-      title={UNIT: nsupervised Online Instance Segmentation through Time}, 
+      title={UNIT: unsupervised Online Instance Segmentation through Time}, 
       author={Corentin Sautier and Gilles Puy and Alexandre Boulch and Renaud Marlet and Vincent Lepetit},
       year={2024},
       arxiv={2310.17504},
       journal={arXiv},
-      url={/unit}, 
+      url={https://CSautier.github.io/unit}, 
       code={https://github.com/valeoai/UNIT},
       preview={UNIT.jpg},
       bibtex_show={true},
