UNIT accepted at 3DV

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,17 +39,20 @@
 @string{VR = {Vis. Res.}}
 
 
-@article{sautier2024UNIT,
-      title={UNIT: unsupervised Online Instance Segmentation through Time}, 
-      author={Corentin Sautier and Gilles Puy and Alexandre Boulch and Renaud Marlet and Vincent Lepetit},
-      year={2024},
-      arxiv={2310.17504},
-      journal={arXiv},
-      url={https://CSautier.github.io/unit}, 
-      code={https://github.com/valeoai/UNIT},
-      preview={UNIT.jpg},
+@inproceedings{sautier2024UNIT,
+      selected  = {true},
+      abbr      = {3DV},
+      title     = {UNIT: unsupervised Online Instance Segmentation through Time}, 
+      author    = {Corentin Sautier and Gilles Puy and Alexandre Boulch and Renaud Marlet and Vincent Lepetit},
+      year      = {2025},
+      arxiv     = {2409.07887},
+      booktitle = {International Conference on 3D Vision},
+       google_scholar_id={W7OEmFMy1HYC},
+      url       = {https://CSautier.github.io/unit}, 
+      code      = {https://github.com/valeoai/UNIT},
+      preview   = {UNIT.jpg},
       bibtex_show={true},
-      abstract={Online object segmentation and tracking in Lidar point clouds enables autonomous agents to understand their surroundings and make safe decisions. Unfortunately, manual annotations for these tasks are prohibitively costly. We tackle this problem with the task of class-agnostic unsupervised online instance segmentation and tracking. To that end, we leverage an instance segmentation backbone and propose a new training recipe that enables the online tracking of objects. Our network is trained on pseudo-labels, eliminating the need for manual annotations. We conduct an evaluation using metrics adapted for temporal instance segmentation. Computing these metrics requires temporally-consistent instance labels. When unavailable, we construct these labels using the available 3D bounding boxes and semantic labels in the dataset. We compare our method against strong baselines and demonstrate its superiority across two different outdoor Lidar datasets.},
+      abstract  = {Online object segmentation and tracking in Lidar point clouds enables autonomous agents to understand their surroundings and make safe decisions. Unfortunately, manual annotations for these tasks are prohibitively costly. We tackle this problem with the task of class-agnostic unsupervised online instance segmentation and tracking. To that end, we leverage an instance segmentation backbone and propose a new training recipe that enables the online tracking of objects. Our network is trained on pseudo-labels, eliminating the need for manual annotations. We conduct an evaluation using metrics adapted for temporal instance segmentation. Computing these metrics requires temporally-consistent instance labels. When unavailable, we construct these labels using the available 3D bounding boxes and semantic labels in the dataset. We compare our method against strong baselines and demonstrate its superiority across two different outdoor Lidar datasets.},
 }
 
 @inproceedings{puy2024revisiting,
